[feat] DTO 도입 : handleYutThrowWithResult도 적용